feat: Updated boilerplate
The names of the packages have been updated. The google-services.json
for firebase applications has been updated as well.

--- a/AnkiGame/app/src/main/res/values/strings.xml
+++ b/AnkiGame/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Boilerplate</string>
+    <string name="app_name">AnkiGame</string>
 
     <string name="lbl_add">Add</string>
     <string name="lbl_main">Main</string>
