doc: Added content to 'Gamification for learning' subsection

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -18,4 +18,64 @@
   year={1974},
   publisher={Lawrence Erlbaum}
 }
+@article{salomon1983differential,
+  title={The differential investment of mental effort in learning from different sources},
+  author={Salomon, Gavriel},
+  journal={Educational Psychologist},
+  volume={18},
+  number={1},
+  pages={42--50},
+  year={1983},
+  publisher={Taylor \& Francis}
+}
+@article{boticki2015usage,
+  title={Usage of a mobile social learning platform with virtual badges in a primary school},
+  author={Boticki, Ivica and Baksa, Jelena and Seow, Peter and Looi, Chee-Kit},
+  journal={Computers \& Education},
+  volume={86},
+  pages={120--136},
+  year={2015},
+  publisher={Elsevier}
+}
+@inproceedings{slish2015gamification,
+  title={Gamification Increases Scores of Underperforming Students in Cell Biology},
+  author={Slish, Donald and Nash, Micael and Premo, Joshua},
+  booktitle={EdMedia: World Conference on Educational Media and Technology},
+  pages={870--876},
+  year={2015},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+@inproceedings{morrison2014khan,
+  title={Khan academy gamifies computer science},
+  author={Morrison, Briana B and DiSalvo, Betsy},
+  booktitle={Proceedings of the 45th ACM technical symposium on Computer science education},
+  pages={39--44},
+  year={2014},
+  organization={ACM}
+}
+@article{su2015mobile,
+  title={A mobile gamification learning system for improving the learning motivation and achievements},
+  author={Su, C-H and Cheng, C-H},
+  journal={Journal of Computer Assisted Learning},
+  volume={31},
+  number={3},
+  pages={268--286},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+@inproceedings{gene2014gamification,
+  title={Gamification in MOOC: challenges, opportunities and proposals for advancing MOOC model},
+  author={Gen{\'e}, Oriol Borr{\'a}s and N{\'u}{\~n}ez, Margarita Mart{\'\i}nez and Blanco, {\'A}ngel Fidalgo},
+  booktitle={Proceedings of the Second International Conference on Technological Ecosystems for Enhancing Multiculturality},
+  pages={215--220},
+  year={2014},
+  organization={ACM}
+}
+@inproceedings{cheong2013quick,
+  title={Quick Quiz: A Gamified Approach for Enhancing Learning.},
+  author={Cheong, Christopher and Cheong, France and Filippou, Justin},
+  booktitle={PACIS},
+  pages={206},
+  year={2013}
+}
 
