doc: Added content to 'Previous attempts to gamify Anki'

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -78,4 +78,27 @@
   pages={206},
   year={2013}
 }
-
+@online{glut2017progress,
+  author = {Glutanimate},
+  title = {Progress Bar},
+  year = {2017},
+  url = {https://ankiweb.net/shared/info/2091361802}
+}
+@online{glut2017puppy,
+  author = {Glutanimate},
+  title = {Puppy Reinforcement},
+  year = {2017},
+  url = {https://ankiweb.net/shared/info/1722658993}
+}
+@online{proxx2010warrior,
+  author = {Proxx},
+  title = {AnkiWarrior - making Anki more addictive},
+  year = {2010},
+  url = {https://forum.koohii.com/showthread.php?tid=6521}
+}
+@online{proxx2012emperor,
+  author = {Proxx},
+  title = {AnkiEmperor - Build your own empire},
+  year = {2012},
+  url = {https://forum.koohii.com/thread-9207.html}
+}
