--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -102,3 +102,15 @@
   year = {2012},
   url = {https://forum.koohii.com/thread-9207.html}
 }
+@online{uberspot2017game,
+  author = {Uberspot},
+  title = {2048},
+  year = {2017},
+  url = {https://play.google.com/store/apps/details?id=com.uberspot.a2048}
+}
+@misc{disalvo2014khan,
+  title={Khan Academy Gamifies Computer Science},
+  author={DiSalvo, Briana B Morrison Betsy},
+  year={2014},
+  publisher={Georgia}
+}
