doc: Avoided sections with single paragraphs in Chapter 4

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -114,3 +114,11 @@
   year={2014},
   publisher={Georgia}
 }
+@incollection{richter2015studying,
+  title={Studying gamification: the effect of rewards and incentives on motivation},
+  author={Richter, Ganit and Raban, Daphne R and Rafaeli, Sheizaf},
+  booktitle={Gamification in education and business},
+  pages={21--46},
+  year={2015},
+  publisher={Springer}
+}
