doc: Re-structured and added images to chapter 5

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -33,6 +33,9 @@
 \usepackage[square, comma, sort&compress]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers'
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
 
+% Merge cells in table
+\usepackage{multirow}
+
 % For size of cells in tables
 \usepackage{array}
 \newcolumntype{S}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
