--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -122,3 +122,64 @@
   year={2015},
   publisher={Springer}
 }
+@article{russoniello2009effectiveness,
+  title={The effectiveness of casual video games in improving mood and decreasing stress},
+  author={Russoniello, Carmen V and O’Brien, Kevin and Parks, Jennifer M},
+  journal={Journal of CyberTherapy \& Rehabilitation},
+  volume={2},
+  number={1},
+  pages={53--66},
+  year={2009}
+}
+@article{reinecke2009games,
+  title={Games at work: The recreational use of computer games during working hours},
+  author={Reinecke, Leonard},
+  journal={Cyberpsychology \& Behavior},
+  volume={12},
+  number={4},
+  pages={461--465},
+  year={2009},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+}
+@article{peirce2010personalised,
+  title={Personalised learning for casual games: The'language trap'online language learning game},
+  author={Peirce, Neil and Wade, Vincent},
+  journal={Leading Issues in Games Based Learning},
+  volume={159},
+  year={2010}
+}
+@inproceedings{abdelkader20162048,
+  title={2048 without new tiles is still hard},
+  author={Abdelkader, Ahmed and Acharya, Aditya and Dasler, Philip},
+  booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
+  volume={49},
+  year={2016},
+  organization={Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+}
+@inproceedings{boris2016evolving,
+  title={Evolving neural network to play game 2048},
+  author={Boris, Tuponja and Goran, {\v{S}}ukovi{\'c}},
+  booktitle={Telecommunications Forum (TELFOR), 2016 24th},
+  pages={1--3},
+  year={2016},
+  organization={IEEE}
+}
+@inproceedings{rodgers2014investigation,
+  title={An investigation into 2048 AI strategies},
+  author={Rodgers, Philip and Levine, John},
+  booktitle={Computational Intelligence and Games (CIG), 2014 IEEE Conference on},
+  pages={1--2},
+  year={2014},
+  organization={IEEE}
+}
+@article{neller2015pedagogical,
+  title={Pedagogical possibilities for the 2048 puzzle game},
+  author={Neller, Todd W},
+  journal={Journal of Computing Sciences in Colleges},
+  volume={30},
+  number={3},
+  pages={38--46},
+  year={2015},
+  publisher={Consortium for Computing Sciences in Colleges}
+}
+
