doc: Added abstract

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -105,7 +105,7 @@
 \deptname\\[2cm] % Research group name and department name
 
 {\large \today}\\[1cm] % Date
-\includegraphics[width=6cm]{./Figures/UoE_logo.png} % University/department logo - uncomment to place it
+\includegraphics[width=5cm]{./Figures/UoE_logo.png} % University/department logo - uncomment to place it
 
 \vfill
 \end{center}
@@ -155,19 +155,19 @@ Date:\\
 %	QUOTATION PAGE
 %----------------------------------------------------------------------------------------
 
-\pagestyle{empty} % No headers or footers for the following pages
+% \pagestyle{empty} % No headers or footers for the following pages
 
-\null\vfill % Add some space to move the quote down the page a bit
+% \null\vfill % Add some space to move the quote down the page a bit
 
-\textit{``Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism."}
+% \textit{``Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism."}
 
-\begin{flushright}
-Dave Barry
-\end{flushright}
+% \begin{flushright}
+% Dave Barry
+% \end{flushright}
 
-\vfill\vfill\vfill\vfill\vfill\vfill\null % Add some space at the bottom to position the quote just right
+% \vfill\vfill\vfill\vfill\vfill\vfill\null % Add some space at the bottom to position the quote just right
 
-\clearpage % Start a new page
+% \clearpage % Start a new page
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
@@ -179,7 +179,8 @@ Dave Barry
 
  {\huge{\textit{Abstract}} \par}{\addtocontents{toc}{\vspace{1em}}
 
-The Thesis Abstract is written here (and usually kept to just this page).
+Spaced repetition is a technique aimed to facilitate the retention of knowledge. Anki is a general purpose tool that implements spaced repetition. Despite its popularity, its interface for Android devices, known as AnkiDroid, lacks the inclusion of extrinsic motivational elements. Gamification consists in the inclusion of game elements and schemes in non-game contexts. The objective is to improve user experience by providing extra motivational elements in existing tools. The present work provides a gamification strategy aimed to increase user engagement in AnkiDroid. The key difference with other gamification options is the inclusion of a casual game. The process required the design and implementation of the gamification solution, the definition and execution of a study to collect data, and the evaluation of the solution. The results showed that there was no statistical significant difference between a traditional gamification scheme and the proposed one. Those results served as the base to discuss potential issues in the design and suggest additional work.
+
 %The page is kept centered vertically so can expand into the blank space above the title too\ldots
 %
 
@@ -193,7 +194,6 @@ The Thesis Abstract is written here (and usually kept to just this page).
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-The acknowledgements and the people to thank go here, don't forget to include your project advisor :)
 }
 \clearpage % Start a new page
 
@@ -304,7 +304,7 @@ $\omega$ & angular frequency & rads$^{-1}$ \\
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-\input{Appendices/AppendixA}
+% \input{Appendices/AppendixA}
 %\input{Appendices/AppendixB}
 %\input{Appendices/AppendixC}
 
