doc: Revised the grammar of the first draft

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -179,7 +179,7 @@ Date:\\
 
  {\huge{\textit{Abstract}} \par}{\addtocontents{toc}{\vspace{1em}}
 
-Spaced repetition is a technique aimed to facilitate the retention of knowledge. Anki is a general purpose tool that implements spaced repetition. Despite its popularity, its interface for Android devices, known as AnkiDroid, lacks the inclusion of extrinsic motivational elements. Gamification consists in the inclusion of game elements and schemes in non-game contexts. The objective is to improve user experience by providing extra motivational elements in existing tools. The present work provides a gamification strategy aimed to increase user engagement in AnkiDroid. The key difference with other gamification options is the inclusion of a casual game. The process required the design and implementation of the gamification solution, the definition and execution of a study to collect data, and the evaluation of the solution. The results showed that there was no statistical significant difference between a traditional gamification scheme and the proposed one. Those results served as the base to discuss potential issues in the design and suggest additional work.
+Anki is a software system that implements spaced repetition. Despite its popularity, its interface for Android devices, known as AnkiDroid, lacks the inclusion of extrinsic motivational elements. Gamification consists in the inclusion of game elements and schemes in non-game contexts; its objective is to improve user experience by providing extra motivational elements in existing tools. The present work provides a gamification strategy aimed to increase user engagement in AnkiDroid. The key difference from other gamification options is the inclusion of a casual game. The process included the design and implementation of the gamification solution, the definition and execution of a study to collect data, and the evaluation of the solution. The results showed that there was no statistical significant difference between a traditional gamification scheme and the proposed one. Those results served as the base to discuss potential issues in the design and suggest additional work.
 
 %The page is kept centered vertically so can expand into the blank space above the title too\ldots
 %
@@ -193,7 +193,7 @@ Spaced repetition is a technique aimed to facilitate the retention of knowledge.
 \setstretch{1.3} % Reset the line-spacing to 1.3 for body text (if it has changed)
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
-
+Thanks to Dr. Hugh Leather and Dr. Volver Seeker for their supervision and guidance. Thanks to Dr. Kami Vaniea for her suggestions on user interface modifications.
 }
 \clearpage % Start a new page
 
@@ -216,16 +216,16 @@ Spaced repetition is a technique aimed to facilitate the retention of knowledge.
 %	ABBREVIATIONS
 %----------------------------------------------------------------------------------------
 
-\clearpage % Start a new page
+% \clearpage % Start a new page
 
-\setstretch{1.5} % Set the line spacing to 1.5, this makes the following tables easier to read
+% \setstretch{1.5} % Set the line spacing to 1.5, this makes the following tables easier to read
 
-\lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
-\listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
-{
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere \\
-%\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
-}
+% \lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
+% \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
+% {
+% \textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere \\
+% %\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
+% }
 
 %----------------------------------------------------------------------------------------
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
@@ -246,33 +246,34 @@ Spaced repetition is a technique aimed to facilitate the retention of knowledge.
 %	SYMBOLS
 %----------------------------------------------------------------------------------------
 
-\clearpage % Start a new page
+% \clearpage % Start a new page
 
-\lhead{\emph{Symbols}} % Set the left side page header to "Symbols"
+% \lhead{\emph{Symbols}} % Set the left side page header to "Symbols"
 
-\listofnomenclature{lll} % Include a list of Symbols (a three column table)
-{
-$a$ & distance & m \\
-$P$ & power & W (Js$^{-1}$) \\
-% Symbol & Name & Unit \\
+% \listofnomenclature{lll} % Include a list of Symbols (a three column table)
+% {
+% $\mu$ & mean \\
+% $c$ & number of coins \\
+% $p$ & number of points \\
+% $t$ & time & s \\
+% % Symbol & Name & Unit \\
 
-& & \\ % Gap to separate the Roman symbols from the Greek
+% & & \\ % Gap to separate the Roman symbols from the Greek
 
-$\omega$ & angular frequency & rads$^{-1}$ \\
-% Symbol & Name & Unit \\
-}
+% % Symbol & Name & Unit \\
+% }
 
 %----------------------------------------------------------------------------------------
 %	DEDICATION
 %----------------------------------------------------------------------------------------
 
-\setstretch{1.3} % Return the line spacing back to 1.3
+% \setstretch{1.3} % Return the line spacing back to 1.3
 
-\pagestyle{empty} % Page style needs to be empty for this page
+% \pagestyle{empty} % Page style needs to be empty for this page
 
-\dedicatory{For/Dedicated to/To my\ldots} % Dedication text
+% \dedicatory{For/Dedicated to/To my\ldots} % Dedication text
 
-\addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
+% \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
