doc: Added references for Anki

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -182,4 +182,14 @@
   year={2015},
   publisher={Consortium for Computing Sciences in Colleges}
 }
-
+@misc{raoul2012ankidroid,
+  title={AnkiDroid flashcards. Retrieved December 2012},
+  author={Raoul, N},
+  year={2012}
+}
+@article{zamora2011ankidroid,
+  title={AnkiDroid: Open Source Development in Android},
+  author={Zamora Suri{\~n}ach, Eduard},
+  year={2011},
+  publisher={Universitat Polit{\`e}cnica de Catalunya}
+}
