--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -179,7 +179,7 @@ Date:\\
 
  {\huge{\textit{Abstract}} \par}{\addtocontents{toc}{\vspace{1em}}
 
-Anki is a software system that implements spaced repetition. Despite its popularity, its interface for Android devices, known as AnkiDroid, lacks the inclusion of extrinsic motivational elements. Gamification consists in the inclusion of game elements and schemes in non-game contexts; its objective is to improve user experience by providing extra motivational elements in existing tools. The present work provides a gamification strategy aimed to increase user engagement in AnkiDroid. The key difference from other gamification options is the inclusion of a casual game. The process included the design and implementation of the gamification solution, the definition and execution of a study to collect data, and the evaluation of the solution. The results showed that there was no statistical significant difference between a traditional gamification scheme and the proposed one. Those results served as the base to discuss potential issues in the design and suggest additional work.
+Anki is a software system that implements spaced repetition. Despite its popularity, its interface for Android devices, known as AnkiDroid, lacks the inclusion of extrinsic motivational elements. Gamification consists in the inclusion of game elements and schemes in non-game contexts; its objective is to improve the user experience by providing extra motivational elements in existing tools. The present work provides a gamification strategy aimed at increasing user engagement in AnkiDroid. The key difference from other gamification options is the inclusion of a casual game. The project consists in the design and implementation of the gamification solution, the definition and execution of a study to collect data, and the evaluation of the solution. The results showed that there was no statistical significant difference between a traditional gamification scheme and the proposed one. Those results served as the base to discuss potential issues in the design and suggest additional work.
 
 %The page is kept centered vertically so can expand into the blank space above the title too\ldots
 %
