doc: Added references and abbreviations for metrics

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -82,31 +82,31 @@
   author = {Glutanimate},
   title = {Progress Bar},
   year = {2017},
-  url = {https://ankiweb.net/shared/info/2091361802}
+  howpublished = {\url{https://ankiweb.net/shared/info/2091361802}}
 }
 @online{glut2017puppy,
   author = {Glutanimate},
   title = {Puppy Reinforcement},
   year = {2017},
-  url = {https://ankiweb.net/shared/info/1722658993}
+  howpublished = {\url{https://ankiweb.net/shared/info/1722658993}}
 }
 @online{proxx2010warrior,
   author = {Proxx},
   title = {AnkiWarrior - making Anki more addictive},
   year = {2010},
-  url = {https://forum.koohii.com/showthread.php?tid=6521}
+  howpublished = {\url{https://forum.koohii.com/showthread.php?tid=6521}}
 }
 @online{proxx2012emperor,
   author = {Proxx},
   title = {AnkiEmperor - Build your own empire},
   year = {2012},
-  url = {https://forum.koohii.com/thread-9207.html}
+  howpublished = {\url{https://forum.koohii.com/thread-9207.html}}
 }
 @online{uberspot2017game,
-  author = {Uberspot},
-  title = {2048},
-  year = {2017},
-  url = {https://play.google.com/store/apps/details?id=com.uberspot.a2048}
+  author = {Gabriele Cirulli},
+  title = {2048 game},
+  year = {2014},
+  howpublished = {\url{http://2048game.com/}}
 }
 @misc{disalvo2014khan,
   title={Khan Academy Gamifies Computer Science},
@@ -192,4 +192,16 @@
   author={Zamora Suri{\~n}ach, Eduard},
   year={2011},
   publisher={Universitat Polit{\`e}cnica de Catalunya}
+}
+@online{velasquez2018ankigame,
+  author = {Sebastian Velasquez},
+  title = {AnkiGame | Enjoy spaced repetition},
+  year = {2018},
+  howpublished = {\url{https://play.google.com/store/apps/details?id=com.ichi2.anki.connection}}
+}
+@online{velasquez2018ankiplay,
+  author = {Sebastian Velasquez},
+  title = {AnkiPlay},
+  year = {2018},
+  howpublished = {\url{https://play.google.com/store/apps/details?id=com.ichi2.anki.independent}}
 }
