doc: Fixed grammar errors

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -1,5 +1,5 @@
 @inproceedings{deterding2011game,
-  title={From game design elements to gamefulness: defining gamification},
+  title={From game design elements to gamefulness: Defining gamification},
   author={Deterding, Sebastian and Dixon, Dan and Khaled, Rilla and Nacke, Lennart},
   booktitle={Proceedings of the 15th international academic MindTrek conference: Envisioning future media environments},
   pages={9--15},
@@ -64,7 +64,7 @@
   publisher={Wiley Online Library}
 }
 @inproceedings{gene2014gamification,
-  title={Gamification in MOOC: challenges, opportunities and proposals for advancing MOOC model},
+  title={Gamification in {MOOC}: challenges, opportunities and proposals for advancing {MOOC} model},
   author={Gen{\'e}, Oriol Borr{\'a}s and N{\'u}{\~n}ez, Margarita Mart{\'\i}nez and Blanco, {\'A}ngel Fidalgo},
   booktitle={Proceedings of the Second International Conference on Technological Ecosystems for Enhancing Multiculturality},
   pages={215--220},
@@ -115,7 +115,7 @@
   publisher={Georgia}
 }
 @incollection{richter2015studying,
-  title={Studying gamification: the effect of rewards and incentives on motivation},
+  title={Studying gamification: {T}he effect of rewards and incentives on motivation},
   author={Richter, Ganit and Raban, Daphne R and Rafaeli, Sheizaf},
   booktitle={Gamification in education and business},
   pages={21--46},
@@ -142,7 +142,7 @@
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
 @article{peirce2010personalised,
-  title={Personalised learning for casual games: The'language trap'online language learning game},
+  title={Personalised learning for casual games: The \enquote{language trap} online language learning game},
   author={Peirce, Neil and Wade, Vincent},
   journal={Leading Issues in Games Based Learning},
   volume={159},
@@ -165,7 +165,7 @@
   organization={IEEE}
 }
 @inproceedings{rodgers2014investigation,
-  title={An investigation into 2048 AI strategies},
+  title={An investigation into 2048 {AI} strategies},
   author={Rodgers, Philip and Levine, John},
   booktitle={Computational Intelligence and Games (CIG), 2014 IEEE Conference on},
   pages={1--2},
@@ -183,25 +183,25 @@
   publisher={Consortium for Computing Sciences in Colleges}
 }
 @misc{raoul2012ankidroid,
-  title={AnkiDroid flashcards. Retrieved December 2012},
+  title={Anki{D}roid flashcards. {R}etrieved December 2012},
   author={Raoul, N},
   year={2012}
 }
 @article{zamora2011ankidroid,
-  title={AnkiDroid: Open Source Development in Android},
+  title={Anki{D}roid: Open Source Development in {A}ndroid},
   author={Zamora Suri{\~n}ach, Eduard},
   year={2011},
   publisher={Universitat Polit{\`e}cnica de Catalunya}
 }
 @online{velasquez2018ankigame,
   author = {Sebastian Velasquez},
-  title = {AnkiGame | Enjoy spaced repetition},
+  title = {Anki{G}ame | Enjoy spaced repetition},
   year = {2018},
   howpublished = {\url{https://play.google.com/store/apps/details?id=com.ichi2.anki.connection}}
 }
 @online{velasquez2018ankiplay,
   author = {Sebastian Velasquez},
-  title = {AnkiPlay},
+  title = {Anki{P}lay},
   year = {2018},
   howpublished = {\url{https://play.google.com/store/apps/details?id=com.ichi2.anki.independent}}
 }
