--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -121,11 +121,11 @@
 
 \addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-I, \authornames, declare that this thesis titled, '\ttitle' and the work presented in it is my own. I confirm that this work submitted for assessment is my own and is
+I, \authornames, declare that this thesis titled, '\ttitle' and the work presented in it are my own. I confirm that this work submitted for assessment is my own and is
   expressed in my own words. Any uses made within it of the works of
   other authors in any form (e.g., ideas, equations, figures, text,
   tables, programs) are properly acknowledged at any point of their
-  use. A list of the references employed is included.
+  use. A list of the references is included.
 
 %\begin{itemize}
 %\item[\tiny{$\blacksquare$}] This work was done wholly or mainly while in candidature for a research degree at this University.
@@ -179,7 +179,7 @@ Date:\\
 
  {\huge{\textit{Abstract}} \par}{\addtocontents{toc}{\vspace{1em}}
 
-Anki is a software system that implements spaced repetition. Despite its popularity, its interface for Android devices, known as AnkiDroid, lacks the inclusion of extrinsic motivational elements. Gamification consists in the inclusion of game elements and schemes in non-game contexts; its objective is to improve the user experience by providing extra motivational elements in existing tools. The present work provides a gamification strategy aimed at increasing user engagement in AnkiDroid. The key difference from other gamification options is the inclusion of a casual game. The project consists in the design and implementation of the gamification solution, the definition and execution of a study to collect data, and the evaluation of the solution. The results showed that there was no statistical significant difference between a traditional gamification scheme and the proposed one. Those results served as the base to discuss potential issues in the design and suggest additional work.
+Anki is a software system that implements spaced repetition. Despite its popularity, its interface for Android devices, known as AnkiDroid, lacks the inclusion of extrinsic motivational elements. Gamification involves the inclusion of game elements and schemes in non-game contexts; its objective is to improve the user experience by providing extra motivational elements in existing tools. The present work provides a gamification strategy aimed at increasing user engagement in AnkiDroid. The key difference from other gamification options is the inclusion of a casual game. The project consists of the design and implementation of the gamification solution, the definition and execution of a study to collect data, and the evaluation of the solution. The results showed that there was no statistically significant difference between a traditional gamification scheme and the proposed one. Those results served as the basis to discuss potential issues in the design and suggest additional work.
 
 %The page is kept centered vertically so can expand into the blank space above the title too\ldots
 %
