doc: Updated acknowledgements

--- a/Thesis/mainT.tex
+++ b/Thesis/mainT.tex
@@ -101,7 +101,7 @@ Anki is a software system that implements spaced repetition. Despite its popular
 
 %% Acknowledgements
 \begin{acknowledgements}
-Thanks to Dr. Hugh Leather and Dr. Volver Seeker for their supervision and guidance. Thanks to Dr. Kami Vaniea for her suggestions on user interface modifications.
+Thanks to Dr. Hugh Leather and Dr. Volver Seeker for their supervision and guidance. Thanks to Dr. Kami Vaniea for her suggestions on user interface modifications. Thanks to Dr. Rafael Correa for his support to higher education in Ecuador. Special thanks to my family for their support during my studies.
 \end{acknowledgements}
 
 %% Next we need to have the declaration.
