doc: Updated dedication

--- a/Thesis/mainT.tex
+++ b/Thesis/mainT.tex
@@ -109,7 +109,7 @@ Thanks to Dr. Hugh Leather and Dr. Volver Seeker for their supervision and guida
 
 %% Finally, a dedication (this is optional -- uncomment the following line if
 %% you want one).
-% \dedication{To my mummy.}
+\dedication{To Milena and Gabriela.}
 
 %% Create the table of contents
 \tableofcontents
