doc: Updated cover

--- a/Thesis/mainT.tex
+++ b/Thesis/mainT.tex
@@ -33,7 +33,7 @@
 %%  draft: produce a single-spaced, double-sided thesis with narrow margins
 %%
 %% For a PhD thesis -- you must also specify a research institute:
-\documentclass[msc, ai, logo, oneside, fullpacing]{infthesis}
+\documentclass[msc, ai, logo, deptreport, oneside, fullpacing]{infthesis}
 
 %% For an MPhil thesis -- also needs an institute
 % \documentclass[mphil,ianc]{infthesis}
